src/trusted/validator_arm/testdata/bad/invalid_sp_mask_flags.valerr

validate: error: Unsafe use of stack adjustment instruction (not followed by BIC on 80000000):
	       0:	e081d003 		add	sp, r1, r3

